--- a/tools/tsconfig.tools.json
+++ b/tools/tsconfig.tools.json
@@ -1,12 +1,11 @@
 {
   "extends": "../tsconfig.base.json",
+
   "compilerOptions": {
-    "outDir": "../dist/out-tsc/tools",
-    "rootDir": ".",
-    "module": "commonjs",
-    "target": "es5",
-    "types": ["node"],
-    "importHelpers": false
+      "baseUrl": ".",
+      "outDir": "../dist/out-tsc/tools",
+      "rootDir": ".",
+      "types": ["node"]
   },
   "include": ["**/*.ts"]
 }
