--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,14 @@
         "jsx": "preserve",
         "module": "ESNext",
         "moduleResolution": "Node",
-        "noEmit": true,
+        "noEmit": false,
         "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
-        "paths": {},
+        "paths": {
+            "@laboratory/nba-api": ["packages/nba-api/src/index.ts"],
+            "@laboratory/stdlib": ["packages/stdlib/src/index.ts"]
+        },
         "resolveJsonModule": true,
         "rootDir": ".",
         "skipDefaultLibCheck": true,
